--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
@@ -37,8 +38,11 @@
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
     "joi": "^9.0.1",
+    "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.5",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
